--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-progress": "^1.1.8",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "openai": "^4.73.0",
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
